src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_kb_overlay_needs_review_section.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task ╭ Knowledge Base ──────────────────────────────────────────────────────────────────────────────╮
   ◦ <1h    │┌ Knowledge Base (2) — sorted by upvotes ────────────────────────────────────────────────────┐│
────────────││── Needs review (1) ──                                                                      ││────────────
  ▎ #2 Task ││[!] tokio::spawn needs explicit error logging  ↑0  repo:repo  [review]                      ││
   ◦ <1h    ││── Approved (1) ──                                                                          ││
────────────││[h] Prefer concise responses over verbose ones  ↑3  global                                  ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            ││                                                                                            ││
            │ Tab:tree  j/k:nav  a:approve  e:edit  x:reject  A:archive  q:close──────────────────────────┘│
            │ Detail ──────────────────────────────────────────────────────────────────────────────────────│
            │[!] tokio::spawn needs explicit error logging  [needs review]                                 │
            │                                                                                              │
            │Always wrap futures with logging.                                                             │
            │                                                                                              │
────────────│status:needs_review  scope:repo:repo  upvotes:0                                               │────────────
            │tags: async                                                                                   │
            │                                                                                              │
            │                                                                                              │
            ╰──────────────────────────────────────────────────────────────────────────────────────────────╯



[d] brainstorm  [e]dit  [L] move  [x] archive  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D] quick  [s]plit
