src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_managed_feed_config_popup.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task 1                 │  ▎ #3 Task 3              │                              │  ▎ #4 Task 4
   ◦ <1h                      │   ◉ running               │                              │   ✓ <1h
──────────────────────────────│───────────────────────────│                              │──────────────────────────────
  ▎ #2 Task 2                 │                           │                              │
   ◦ <1h                      │                           │                              │
──────────────────────────────│                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                    ╭ Managed feed config ─────────────────────────────────────────────────────────╮
                    │> Reviews command: fetch-reviews.sh                                           │
                    │  Reviews interval (s): 300                                                   │
                    │  CVE command: (unset)                                                        │
                    │  CVE interval (s): (default)                                                 │
                    │                                                                              │
                    │ Tab/↑↓:field  Enter:save  Esc:cancel  (empty command = unset)                │
                    │                                                                              │
                    │                                                                              │
                    │                                                                              │
                    ╰──────────────────────────────────────────────────────────────────────────────╯
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







Managed feed config: Tab/arrows to move, Enter to save, Esc to cancel
