src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_proposed_learnings_empty_state.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
┌ Learnings (0) — sorted by use ───────────────────────────────────────────────────────────────────────────────────────┐
│       ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1          │
│─────────────────────────────│───────────────────────────│──────────────────────────────│─────────────────────────────│
│─────────────────────────────│  ── active                │                              │─────────────────────────────│
│ ▌ #1 Task 1                 │───────────────────────────│                              │  ▎ #4 Task 4                │
│  ◦ <1h                      │  ▎ #3 Task 3              │                              │   ✓ <1h                     │
│─────────────────────────────│   ◉ running               │                              │─────────────────────────────│
│ ▎ #2 Task 2                 │───────────────────────────│                              │                             │
│  ◦ <1h                      │                           │                              │                             │
│─────────────────────────────│                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
│                             │                           │                              │                             │
 Tab:tree  j/k:nav  e:edit  x:reject  A:archive  q:close───────────────────────────────────────────────────────────────┘
 Detail ────────────────────────────────────────────────────────────────────────────────────────────────────────────────
No learning selected          │                           │                              │
                              │                           │                              │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[d] brainstorm  [e]dit  [L] move  [x] archive  [h] projects  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D]
