src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_proposed_learnings_overlay.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
[Default]   Tasks                                                                                                 🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task 1                 │───────────────────────────│                              │  ▎ #4 Task 4
   ◦ <╭ Proposed Learnings (3) ──────────────────────────────────────────────────────────────────────────────────╮
──────│── user ───────────────────────────────────────────────────────────────────────────────────────────────── │──────
  ▎ #2│> [1] Preference        Prefer concise responses over verbose ones  #style                                │
   ◦ <│── repo (/repo) ───────────────────────────────────────────────────────────────────────────────────────── │
──────│  [2] Pitfall           tokio::spawn needs explicit error logging  #async                                 │
      │  [3] Convention        Use LearningService not raw db for learnings                                      │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
      │                                                                                                          │
──────│                                                                                                          │──────
      │                                                                                                          │
      │[a]pprove  [r]eject  [e]dit  [j/k] navigate  [q] close                                                    │
      ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────╯




[d] brainstorm  [e]dit  [L] move  [x] archive  [h] projects  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D]
