src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_quick_dispatch_form.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task 1                 │  ▎ #3 Task 3              │                              │  ▎ #4 Task 4
   ◦ <1h                      │   ◉ running               │                              │   ✓ <1h
──────────────────────────────│───────────────────────────│                              │──────────────────────────────
  ▎ #2 Task 2                 │                           │                              │
   ◦ <1h                      │                           │                              │
──────────────────────────────│                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
┌ Quick Dispatch ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Quick Dispatch — select repo:                                                                                       │
│                                                                                                                      │
│  Filter: _                                                                                                           │
│  ► /repo/alpha                                                                                                       │
│    /repo/beta                                                                                                        │
│                                                                                                                      │
│  Type to filter · [↑/↓] navigate · [Enter] select · [Esc] cancel                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Quick dispatch: select repo path
