src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_quick_dispatch_new_entry.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
 ▸ Tasks                                                                                                          🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task 1                 │  ▎ #3 Task 3              │                              │  ▎ #4 Task 4
   ◦ <1h                      │   ◉ running               │                              │   ✓ <1h
──────────────────────────────│───────────────────────────│                              │──────────────────────────────
  ▎ #2 Task 2                 │                           │                              │
   ◦ <1h                      │                           │                              │
──────────────────────────────│                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
┌ Quick Dispatch ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Quick Dispatch — select repo:                                                                                       │
│                                                                                                                      │
│  Filter: /home/code/work_                                                                                            │
│  ► /home/code/project-work                                                                                           │
│    + /home/code/work                                                                                                 │
│                                                                                                                      │
│  Type to filter · [↑/↓] navigate · [Enter] select · [Esc] cancel                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Quick dispatch: select repo path
